Changing mask dependecies and form inputs
- ngMask was removed and angular-ui-mask was added
- All masks and placeholders were updated
- CEP is now triggered by ng-change with 1s delay
- CPF field was updated to have the CNPJ option

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
 <!-- Other Dependencies -->
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src='bower_components/ngMask/dist/ngMask.min.js'></script>
+<script src="bower_components/angular-ui-mask/dist/mask.js"></script>
 
 <!-- Modules -->
 <script src="app.js"></script>
