--- a/src/main/webapp/register/client/generalInformations.html
+++ b/src/main/webapp/register/client/generalInformations.html
@@ -1,9 +1,17 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <form name="generalInformationsForm">
     <div class="row">
+        <div class="form-group col-md-4 col-sm-4">
+            <div class="radio">
+                <label><input name="option" type="radio" value="fisica" ng-click="changeType('CPF')" checked/>Pessoa Física</label>
+                <label><input name="option" type="radio" value="juridica" ng-click="changeType('CNPJ')"/>Pessoa Jurídica</label>
+            </div>
+        </div>
+    </div>
+    <div class="row">
         <div class="form-group col-md-2 col-sm-2">
-            <label for="inputCpf">CPF</label>
-            <input id="inputCpf" name="inputCpf" type="text" class="form-control" placeholder="___.___.___-__" mask="999.999.999-99" clean="true" ng-model="client.register" required limit/>
+            <label for="inputCpf">{{type}}</label>
+            <input id="inputCpf" name="inputCpf" type="text" class="form-control" uiMaskPlaceholder ui-mask="{{registerMask}}" ng-model="client.register" required/>
         </div>
         <div class="form-group col-md-1 col-sm-1">
             <button type="button" class="sideButton btn btn-success" ng-click="searchCpf(client.register)">Verificar</button>
@@ -26,7 +34,7 @@
     <div class="row">
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputDateOfBirth">Data de nascimento</label>
-            <input id="inputDateOfBirth" name="inputDateOfBirth" type="text" class="form-control" placeholder="__/__/____" mask="99/99/9999" clean="true" ng-model="client.dateOfBirth" required limit/>
+            <input id="inputDateOfBirth" name="inputDateOfBirth" type="text" class="form-control" uiMaskPlaceholder ui-mask="99/99/9999" ng-model="client.dateOfBirth" required/>
         </div>
         <div class="form-group col-md-2 col-sm-4">
             <label for="divGender">Sexo</label>
