--- a/src/main/webapp/register/client/reference.html
+++ b/src/main/webapp/register/client/reference.html
@@ -8,11 +8,11 @@
         </div>
         <div class="form-group col-md-2 col-sm-=4">
             <label for="inputReferenceHomeNumber">Telefone Residencial</label>
-            <input id="inputReferenceHomeNumber" name="inputReferenceHomeNumber" class="form-control" type="text" ng-model="requiredReference.contacts[0].phoneNumber" placeholder="(xx) xxxxx-xxxx" mask="(99) 99999-9999" clean="true" limit/>
+            <input id="inputReferenceHomeNumber" name="inputReferenceHomeNumber" class="form-control" type="text" ng-model="requiredReference.contacts[0].phoneNumber" uiMaskPlaceholder ui-mask="(99) 99999-9999"/>
         </div>  
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputReferenceCellNumber">Telefone Celular</label>
-            <input id="inputReferenceCellNumber" name="inputReferenceCellNumber" class="form-control" type="text" ng-model="requiredReference.contacts[1].phoneNumber" placeholder="(xx) xxxxx-xxxx" mask="(99) 99999-9999" clean="true" limit/>
+            <input id="inputReferenceCellNumber" name="inputReferenceCellNumber" class="form-control" type="text" ng-model="requiredReference.contacts[1].phoneNumber" uiMaskPlaceholder ui-mask="(99) 99999-9999"/>
         </div>
     </div>
     <div class="row" ng-repeat="extraReference in extraReferences">
@@ -22,11 +22,11 @@
         </div>
         <div class="form-group col-md-2 col-sm-=4">
             <label for="inputReferenceHomeNumber">Telefone Residencial</label>
-            <input id="inputReferenceHomeNumber" name="inputReferenceHomeNumber" class="form-control" type="text" ng-model="extraReference.contacts[0].phoneNumber" placeholder="(xx) xxxxx-xxxx" mask="(99) 99999-9999" clean="true" limit/>
+            <input id="inputReferenceHomeNumber" name="inputReferenceHomeNumber" class="form-control" type="text" ng-model="extraReference.contacts[0].phoneNumber" uiMaskPlaceholder ui-mask="(99) 99999-9999"/>
         </div>  
         <div class="form-group col-md-2 col-sm-4">
             <label for="inputReferenceCellNumber">Telefone Celular</label>
-            <input id="inputReferenceCellNumber" name="inputReferenceCellNumber" class="form-control" type="text" ng-model="extraReference.contacts[1].phoneNumber" placeholder="(xx) xxxxx-xxxx" mask="(99) 99999-9999" clean="true" limit/>
+            <input id="inputReferenceCellNumber" name="inputReferenceCellNumber" class="form-control" type="text" ng-model="extraReference.contacts[1].phoneNumber" uiMaskPlaceholder ui-mask="(99) 99999-9999"/>
         </div>
         <div class="form-group col-md-2 col-sm-4">
             <button type="button" class="removeItemButton btn btn-danger" ng-click="removeReference($index)">Remover Referência Pessoal</button>
