--- a/src/main/webapp/search/cep/searchCep.html
+++ b/src/main/webapp/search/cep/searchCep.html
@@ -23,8 +23,7 @@
                 <div class="row">
                     <div class="form-group col-md-4 col-sm-6">
                         <label for="inputNeighbourhood">Logradouro/Bairro</label>
-                        <select id="inputNeighbourhood" class="form-control" ng-options="obj.logradouro + ' / ' + obj.bairro for obj in listCep | orderBy:obj.bairro" ng-model="selectedNeighbourhood" ng-disabled="notSearched" ng-change="setCep()">
-
+                        <select id="inputNeighbourhood" class="form-control" ng-options="obj.logradouro + ' / ' + obj.bairro + ' / ' + obj.complemento for obj in listCep | orderBy:obj.bairro" ng-model="selectedNeighbourhood" ng-disabled="notSearched" ng-change="setCep()">
                         </select>
                     </div>
                     <div class="form-group col-md-2 col-sm-2">
